[gd_scene format=3 uid="uid://cf0dsar753dln"]

[ext_resource type="Script" uid="uid://bse8excy5hipn" path="res://game/enemy/enemy.gd" id="1_3dvn5"]
[ext_resource type="PackedScene" uid="uid://dqn2j366x6odm" path="res://game/enemy/assets/enemy.glb" id="3_8s3bx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q106d"]
radius = 0.03466797
height = 0.20214844

[sub_resource type="Animation" id="Animation_q106d"]
length = 0.001

[sub_resource type="Animation" id="Animation_3dvn5"]
resource_name = "walk"
length = 0.3
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q106d"]
_data = {
&"RESET": SubResource("Animation_q106d"),
&"walk": SubResource("Animation_3dvn5")
}

[node name="Enemy" type="RigidBody3D" unique_id=307083412]
collision_layer = 4
freeze_mode = 1
script = ExtResource("1_3dvn5")
release_mode = 0
metadata/_custom_type_script = "uid://bfrlpbsqg5lqr"

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1686408879]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.09064478, 0)
shape = SubResource("CapsuleShape3D_q106d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1997561470]
libraries/ = SubResource("AnimationLibrary_q106d")

[node name="EnemyModel" parent="." unique_id=1641419542 instance=ExtResource("3_8s3bx")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0.08, 0)

[connection signal="dropped" from="." to="." method="_on_dropped"]
[connection signal="grabbed" from="." to="." method="_on_grabbed"]

[editable path="EnemyModel"]
